--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Góc Làm Đẹp | Siêu Thị Mỹ Phẩm
 email: doan.trong.quoc.binh@gmail.com
 description: Hân hạnh chào đón bạn đến với Trang Web trực tuyến phục vụ khách hàng từ xa của chúng tôi.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://goclamdep.xyz" # the base hostname & protocol for your site
+url: "https://techint.info" # the base hostname & protocol for your site
 google_analytics: "UA-138771107-1"
 
 # User Settings
